--- a/python-for-data-science/notebooks/logistic-regression.ipynb
+++ b/python-for-data-science/notebooks/logistic-regression.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 23
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 25
     }
    ],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 26
     }
    ],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 27
     }
    ],
    "source": [
@@ -196,6 +196,8 @@
   {
    "source": [
     "# Exercise\n",
+    "## (Classification)\n",
+    "\n",
     "\n",
     "This is a very simple Machine Learning example.\n",
     "\n",
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,12 +244,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 22,
+   "execution_count": 29,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +272,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 31
     }
    ],
    "source": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +300,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 32
     }
    ],
    "source": [
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +320,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 33
     }
    ],
    "source": [
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 34
     }
    ],
    "source": [
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +391,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 37
     }
    ],
    "source": [
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 38
     }
    ],
    "source": [
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 39
     }
    ],
    "source": [
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +460,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 40
     }
    ],
    "source": [
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +480,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 41
     }
    ],
    "source": [
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +500,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 42
     }
    ],
    "source": [
