--- a/python-for-data-science/notebooks/logistic-regression.ipynb
+++ b/python-for-data-science/notebooks/logistic-regression.ipynb
@@ -195,8 +195,8 @@
   },
   {
    "source": [
-    "# Exercise\n",
-    "## (Classification)\n",
+    "## Exercise\n",
+    "### (Classification)\n",
     "\n",
     "\n",
     "This is a very simple Machine Learning example.\n",
