Decision Tree and Random Forest Example and exercises

--- a/python-for-data-science/notebooks/svm.ipynb
+++ b/python-for-data-science/notebooks/svm.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "source": [
-    "# Support Vector Machine - For Binary Classification\n",
+    "# Support Vector Machine\n",
     "---\n",
     "\n",
     "## Model used to **Regression** and **Classification** (Exercise bellow)\n",
@@ -42,7 +42,7 @@
   {
    "source": [
     "## Exercise\n",
-    "### **(Classification)**\n",
+    "### **(Binary Classification)**\n",
     "### **Obese Fiches**\n",
     "\n",
     "**Model:** ?? (Maybe Logistic Regression - Classification)\n",
