Adding new content - PCA - KNN and etc...

--- a/python-for-data-science/notebooks/decision-tree-csf.ipynb
+++ b/python-for-data-science/notebooks/decision-tree-csf.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "## Plotting using [**Graphviz**](https://graphviz.org/download/)\n",
     "\n",
-    "To understand more about __decision trees__, fill the sheet file: `../others/decision-tree-how-to-do.numbers`"
+    "### To understand more about __decision trees__, fill the sheet file: `../others/decision-tree-how-to-do.numbers`"
    ],
    "cell_type": "markdown",
    "metadata": {}
